Fix dark mode Edge option styling.

--- a/docs/.vuepress/theme/styles/color-mode.pcss
+++ b/docs/.vuepress/theme/styles/color-mode.pcss
@@ -100,6 +100,13 @@
     }
   }
 
+  .doc-set-version {
+    /* Edge */
+    option {
+      @apply text-gray-900;
+    }
+  }
+
   .code-placeholder {
     border-color: #252525;
     background: linear-gradient(
